<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">TournaMate</string>
    <string name="mainMenu_commingSoonToast">Not yet implemented. Comming soon :-)</string>
    <string name="resume_tournament_titleNotComplete">Showing incomplete matches</string>
    <string name="resume_tournament_titleComplete">Showing complete matches</string>
    <string name="mainMenu_newButton">New Tournament</string>
    <string name="mainMenu_Find">Find tournaments</string>
    <string name="mainMenu_ResumeMatch">Resume active tournament</string>
    <string name="mainMenu_Favorite">Start favorite</string>
    <string name="newTournament_header">Make new tournament</string>
    <string name="newTournament_dialogHeader">New Tournament</string>
    <string name="newTournament_dialogText">Set tournament name</string>
    <string name="addplayer_header">Add players</string>
    <string name="addplayer_2players">You must choose at least 2 players</string>
    <string name="addplayer_hint">Add a name to list</string>
    <string name="addplayer_addButton">Add to list</string>
    <string name="addplayer_removeButton">Remove selected</string>
    <string name="addplayer_selectAllButton">Select All</string>
    <string name="addplayer_done">DONE</string>
    <string name="maketeams_header">Make teams</string>
    <string name="maketeams_3players">At least 3 players are needed</string>
    <string name="maketeams_dialogHeader">Choose tournament type</string>
    <string name="maketeams_dialogRoundRobin">Round Robin: All teams play versus each other. Highes score wins  \" +                    \"Single Elimination: Knock-out type tournament. Winner of each match progresses. Last teams wins</string>
    <string name="maketeams_dialogPosButton">Round Robin</string>
    <string name="maketeams_dialogNegButton">Elimination</string>
    <string name="maketeams_buttonnNoTeams">No teams</string>
    <string name="maketeams_buttonnRandom">Random teams</string>
    <string name="maketeams_buttonManual">Set teams manually</string>
    <string name="tournamentResume_header">Ready to start</string>
    <string name="tournamentResume_dialogHeader">Creating new tournament</string>
    <string name="tournamentResume_dialogText">Uploading to Parse</string>
    <string name="tournamentResume_teamHeader">Teams</string>
    <string name="tournamentResume_tournamentHeader">Tournament type</string>
    <string name="tournamentResume_buttonMatchOffline">Match offline</string>
    <string name="tournamentResume_buttonMatchOnline">Match online</string>
    <string name="activeTournament_buttonRank">Rank</string>
    <string name="activeTournament_buttonMatchlist">View all matches</string>
    <string name="activeTournament_buttonNext">Play next match</string>
    <string name="activeTournament_Match">Match #</string>
    <string name="activeTournament_playNext">Play last match!</string>
    <string name="activeTournament_done">DONE!</string>
    <string name="activeTournament_seeWinner">See winner</string>
    <string name="tournamentWinner_header">Results</string>
    <string name="tournamentWinner_theWinneris">Tournament winner:</string>
    <string name="tournamentWinner_end">End</string>
    <string name="addplayer_selectPlayers">Select players</string>
    <string name="rank_tournamentRank">Tournament rank</string>
    <string name="rank_listRank">Rank</string>
    <string name="rank_listName">Name</string>
    <string name="resume_tournament_buttonShowComplete">Show complete turnaments</string>
    <string name="resume_tournament_buttonNotComplete">Show incomplete turnaments</string>
    <string name="resume_tournament_buttonDelete">Delete selected</string>
    <string name="resume_tournament_buttonResume">Resume selected</string>
    <string name="resume_tournament_resumeOne">You may only resume one tournament. Select one</string>
    <string name="findTournament_hint">Enter tournament name</string>
    <string name="findTournament_searchButton">Search</string>
    <string name="addplayer_RemoveAllButton">Remove all</string>
    <string name="notOnline">You are not online. Turnament will be offline</string>
    <string name="title_activity_test_material_design">testMaterialDesign</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_item1">Item 1</string>
    <string name="navigation_item2">Item 2</string>
    <string name="navigation_item3">Item 3</string>
    <string name="navigation_item4">Item 4</string>
    <string name="drawer_close">Drawer close</string>
    <string name="drawer_open">Drawer open</string>
    <string name="title_activity_logon_akt">logon_akt</string>
    <string name="facebook_app_id">1684225831809319</string>
</resources>
