<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
android:orientation="vertical" android:layout_width="match_parent"
android:layout_height="match_parent"
android:weightSum="1"
    android:background="#81617e">

<ImageView
    android:layout_width="250dp"
    android:layout_height="140dp"
    android:id="@+id/splash"
    android:src="@drawable/tm_logo_no_bg"
    android:layout_gravity="center_horizontal"
    android:layout_weight="0.17"
    android:layout_marginBottom="90dp"
    android:layout_marginTop="20dp"/>

<Button
    android:layout_width="230dp"
    android:layout_height="wrap_content"
    android:text="@string/mainMenu_newButton"
    android:id="@+id/buttonStartNew"
    android:layout_gravity="center_horizontal"
    android:layout_weight="0.02"
    android:textColor="#ffffff"
    android:background="@drawable/main_menu_button"
    android:layout_marginBottom="5dp" />

<Button
    android:layout_width="230dp"
    android:layout_height="wrap_content"
    android:text="@string/mainMenu_Find"
    android:id="@+id/buttonFindTournament"
    android:layout_gravity="center_horizontal"
    android:layout_weight="0.02"
    android:background="@drawable/main_menu_button"
    android:textColor="#ffffff"
    android:layout_marginBottom="5dp"/>

    <Button
        android:layout_width="230dp"
        android:layout_height="wrap_content"
        android:text="@string/mainMenu_ResumeMatch"
        android:id="@+id/buttonResumeTournament"
        android:layout_gravity="center_horizontal"
        android:layout_weight="0.02"
        android:background="@drawable/main_menu_button"
        android:textColor="#ffffff"
        android:layout_marginBottom="5dp"/>

    <Button
        android:layout_width="230dp"
        android:layout_height="wrap_content"
        android:text="@string/mainMenu_Favorite"
        android:id="@+id/buttonStartFavorite"
        android:layout_gravity="center_horizontal"
        android:layout_weight="0.02"
        android:background="@drawable/main_menu_button"
        android:textColor="#ffffff"
        android:layout_marginBottom="5dp"/>
</LinearLayout>