<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="Match # X"
        android:id="@+id/textViewMatchNumber"
        android:layout_gravity="center_horizontal"
        android:textSize="45dp"
        android:gravity="center_vertical|center_horizontal"
        android:background="@android:color/holo_red_light" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="Team X"
        android:id="@+id/textViewTeamX"
        android:layout_gravity="center_horizontal"
        android:textSize="35dp" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="center_vertical|center_horizontal">

        <Button
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:text="-"
            android:id="@+id/buttonTeamXMinus"
            android:textSize="30dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="0"
            android:id="@+id/textViewTeamXScore"
            android:textSize="35dp"
            android:paddingLeft="40dp"
            android:paddingRight="40dp" />

        <Button
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:text="+"
            android:id="@+id/buttonTeamXPlus"
            android:textSize="30dp" />

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="VS"
        android:id="@+id/textViewVS"
        android:layout_gravity="center_horizontal"
        android:textSize="50dp"
        android:gravity="center_vertical|center_horizontal" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="center_vertical|center_horizontal">

        <Button
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:text="-"
            android:id="@+id/buttonTeamYMinus"
            android:textSize="30dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="0"
            android:id="@+id/textViewTeamYScore"
            android:textSize="35dp"
            android:paddingRight="40dp"
            android:paddingLeft="40dp" />

        <Button
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:text="+"
            android:id="@+id/buttonTeamYPlus"
            android:textSize="30dp" />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="Team Y"
        android:id="@+id/textViewTeamY"
        android:layout_gravity="center_horizontal"
        android:textSize="35dp" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="1"
        android:gravity="center_vertical|center_horizontal"
        android:layout_gravity="center_horizontal">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/activeTournament_buttonRank"
            android:id="@+id/buttonRank" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/activeTournament_buttonMatchlist"
            android:id="@+id/buttonViewAllMatches" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="39dp"
            android:text="@string/activeTournament_buttonNext"
            android:id="@+id/buttonNextMatch"
            android:background="#ff0fae02" />
    </LinearLayout>
</LinearLayout>